# uc-intg-jvc

./: CHANGELOG.md  Dockerfile  README.md  docker-entry.sh  driver.json  main.py  pyproject.toml  requirements.txt
.github/workflows/: build.yml
intg-jvc/: config.py  const.py  discover.py  driver.py  jvc_select.py  media_player.py  projector.py  remote.py  select_entity.py  sensor.py  setup.py
