[project]
name = "uc-intg-jvc"
version = "1.1.1"
description = "Unfolded Circle JVC Projector Integration"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyee>=9.0",
    "pyjvcprojector==2.0.1",
    "sddp-discovery-protocol>=1.5.0",
    "ucapi==0.5.1",
    "ucapi-framework==1.6.7",
]
