[project]
name = "uc-intg-jvc"
version = "1.3.0"
description = "Unfolded Circle JVC Projector Integration"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyee>=9.0",
    "pyjvcprojector==2.0.2",
    "sddp-discovery-protocol>=1.5.0",
    "ucapi==0.5.2",
    "ucapi-framework==1.9.0",
]
