[project]
name = "uc-intg-jvc"
version = "1.3.3"
description = "Unfolded Circle JVC Projector Integration"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyee>=9.0",
    "pyjvcprojector==2.0.6",
    "sddp-discovery-protocol>=1.5.0",
    "ucapi==0.7.0",
    "ucapi-framework==1.9.5",
]
